manifests/tls/language-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: language-svc
  namespace: bots
spec:
  type: ExternalName
  externalName: botquestionsen.cognitiveservices.azure.com
