manifests/tls/bots-gtwy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bot-gateway
  namespace: bots
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: bot-credential # must be the same as secret
    hosts:
    - bot.example.com
