manifests/tls/bot-srviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cognitiveservice
  namespace: bots
spec:
  hosts:
  - "*.cognitiveservices.azure.com"
  - "*.cognitive.microsoft.com"
  ports:
  - number: 443
    name: cogservice
    protocol: HTTP
  location: MESH_EXTERNAL
