manifests/tls/webchat-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webchat
  namespace: bots
spec:
  hosts:
  - "bot.example.com"
  gateways:
  - bot-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: webchat-app-svc
